--- a/src/main/resources/Static/style.css
+++ b/src/main/resources/Static/style.css
@@ -7,9 +7,11 @@ main {
 
 }
 
+
+
 body{
     margin: 0;
-    background-color: white;
+    color: red;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -40,7 +42,7 @@ body{
     background-position: center;
     background-size: cover;
     text-align: center;
-    color: white;
+    color: black;
     line-height: 400px;
     font-size: 125px;
 }
@@ -55,7 +57,7 @@ ul {
 
 .auction-card  {
     list-style: none;
-    background-color: rgb(245, 244, 244);
+    background-color: rgb(0, 0, 0);
     min-height: 400px;
     padding: 7px;
     margin: 5px;
@@ -83,23 +85,15 @@ ul {
     justify-content: center;
     align-items: center;
 }
+
 .auction-details > {
     padding: 10px;
-
 }
 
 .footer {
     margin-bottom: 0;
     text-align: center;
     opacity: 80%;
-}
-
-
-.search-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
 }
 
 .auctionform {
