--- a/src/main/resources/Static/style.css
+++ b/src/main/resources/Static/style.css
@@ -47,8 +47,9 @@ body{
 
 .Article-card  {
     list-style: none;
-    background-color: rgb(0, 0, 0);
+    background-color:red;
     min-height: 400px;
+    min-width: 200;
     padding: 7px;
     margin: 5px;
     border-radius: 8px;
@@ -92,4 +93,9 @@ body{
     background-size: cover;
     background-position: center;
     width: 150px;
+}
+.Article-back{
+    background-color: black;
+    min-height: 30%;
+    min-width: 70%;
 }
